[package]
name = "lazy_activitypub"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fedineko/lazy_activitypub"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
more_properties = []

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
# Fedineko
language_utils = { path = "../language_utils" }